# TensorCorePTX

./: CMakeLists.txt  Makefile  README.md  ncu_data_temp.txt  setup.py
bindings/: bindings_fp16.cpp  bindings_int8.cpp
include/: config.h  cuda_utils.h
kernels/: fp16_manual_pack.cu  fp16_ptx_3stage.cu  fp16_ptx_f16acc.cu  fp16_ptx_fp16acc.cu  fp16_ptx_k8.cu  fp16_ptx_manual_pack.cu  fp16_ptx_mma.cu  fp16_ptx_mma_k16.cu  fp16_wmma.cu  int4_ptx_3stage.cu  int4_ptx_manual_pack.cu  int4_ptx_mma_k32.cu  int4_ptx_mma_k64.cu  int4_ptx_mma_k64_x1_x2nontrans_ca.cu  int4_ptx_mma_k64_x2_x2nontrans_ca.cu  int4_ptx_mma_k64_x4_x1nontrans_ca.cu  int4_ptx_mma_k64_x4_x2nontrans_cg.cu  int4_ptx_mma_k64_x4_x2trans_ca.cu  int4_wmma.cu  int8_dp4a.cu  int8_ptx_3stage.cu  int8_ptx_manual_pack.cu  int8_ptx_mma_k16.cu  int8_ptx_mma_k32.cu  int8_ptx_mma_k32_true.cu  int8_wmma.cu
prof/charts/: plot_ncu_metrics.py
prof/charts/run2/: CHARTS.md
prof/md/run1/: fp16_highlevel_comparison.md  ncu_multiple_sizes.md  ncu_summary.md  ncu_txt_profiles_comparison.md
prof/md/run2/: ncu_details.md  notes.md  notes_on_kernels.md
prof/md/run3/: ncu_details.md
prof/md/run4/: ncu_details.md
prof/md/run5/: ncu_details.md
prof/txt/: fp16_ptx_manual_pack.txt  fp16_ptx_manual_pack_debug2.txt  fp16_ptx_mma_debug2.txt  fp16_ptx_mma_ncu.txt
prof/txt/multiple_sizes/: fp16_ptx_3stage_1024.txt  fp16_ptx_3stage_16384.txt  fp16_ptx_3stage_2048.txt  fp16_ptx_3stage_4096.txt  fp16_ptx_3stage_512.txt  fp16_ptx_3stage_8192.txt  fp16_ptx_fp16acc_1024.txt  fp16_ptx_fp16acc_2048.txt  fp16_ptx_fp16acc_512.txt  fp16_ptx_k8_1024.txt  fp16_ptx_k8_16384.txt  fp16_ptx_k8_2048.txt  fp16_ptx_k8_8192.txt  fp16_ptx_manual_pack_1024.txt  fp16_ptx_manual_pack_16384.txt  fp16_ptx_manual_pack_4096.txt  fp16_ptx_manual_pack_8192.txt  fp16_ptx_mma_2048.txt  fp16_ptx_mma_512.txt  fp16_ptx_mma_8192.txt  fp16_wmma_512.txt  fp16_wmma_8192.txt
prof/txt/ncu_8192/: fp16_ptx_3stage_ncu.txt  fp16_ptx_fp16acc_ncu.txt  fp16_wmma_ncu.txt
prof/txt/run2/: charts.md  int8_dp4a_ncu_1024.txt  int8_dp4a_ncu_2048.txt  int8_dp4a_ncu_4096.txt  int8_dp4a_ncu_512.txt  int8_dp4a_ncu_8192.txt  int8_ptx_3stage_ncu_1024.txt  int8_ptx_3stage_ncu_2048.txt  int8_ptx_3stage_ncu_4096.txt  int8_ptx_3stage_ncu_512.txt  int8_ptx_3stage_ncu_8192.txt  int8_ptx_manual_pack_ncu_1024.txt  int8_ptx_manual_pack_ncu_2048.txt  int8_ptx_manual_pack_ncu_4096.txt  int8_ptx_manual_pack_ncu_512.txt  int8_ptx_manual_pack_ncu_8192.txt  int8_ptx_mma_k16_ncu_1024.txt  int8_ptx_mma_k16_ncu_2048.txt  int8_ptx_mma_k16_ncu_4096.txt  int8_ptx_mma_k16_ncu_512.txt  int8_ptx_mma_k16_ncu_8192.txt  int8_ptx_mma_k32_ncu_1024.txt  int8_ptx_mma_k32_ncu_2048.txt  int8_ptx_mma_k32_ncu_4096.txt  int8_ptx_mma_k32_ncu_512.txt  int8_ptx_mma_k32_ncu_8192.txt  int8_ptx_mma_k32_true_ncu_1024.txt  int8_ptx_mma_k32_true_ncu_2048.txt  int8_ptx_mma_k32_true_ncu_4096.txt  int8_ptx_mma_k32_true_ncu_512.txt  int8_ptx_mma_k32_true_ncu_8192.txt  int8_wmma_ncu_1024.txt  int8_wmma_ncu_2048.txt  int8_wmma_ncu_4096.txt  int8_wmma_ncu_512.txt  int8_wmma_ncu_8192.txt  ncu_txt_profiles_comparison.md  profile_int8_dp4a.txt  profile_int8_ptx_3stage.txt  profile_int8_ptx_manual_pack.txt  (+3 more)
prof/txt/run3/: int4_ptx_3stage_ncu_1024.txt  int4_ptx_3stage_ncu_2048.txt  int4_ptx_3stage_ncu_4096.txt  int4_ptx_3stage_ncu_512.txt  int4_ptx_3stage_ncu_8192.txt  int4_ptx_manual_pack_ncu_1024.txt  int4_ptx_manual_pack_ncu_2048.txt  int4_ptx_manual_pack_ncu_4096.txt  int4_ptx_manual_pack_ncu_512.txt  int4_ptx_manual_pack_ncu_8192.txt  int4_ptx_mma_k32_ncu_1024.txt  int4_ptx_mma_k32_ncu_2048.txt  int4_ptx_mma_k32_ncu_4096.txt  int4_ptx_mma_k32_ncu_512.txt  int4_ptx_mma_k32_ncu_8192.txt  int4_ptx_mma_k64_ncu_1024.txt  int4_ptx_mma_k64_ncu_2048.txt  int4_ptx_mma_k64_ncu_4096.txt  int4_ptx_mma_k64_ncu_512.txt  int4_ptx_mma_k64_ncu_8192.txt  int4_wmma_ncu_1024.txt  (+18 more)
scripts/: plot_run1_per_metric_charts.py  plot_run2_per_metric_charts.py  plot_run3_per_metric_charts.py  tmp_regen_charts_professional.py
src/: data.cu  data.h  data_int4.cu  data_int4.h  data_int8.cu  data_int8.h  main.cu  main_int4.cu  main_int8.cu  solver_int4.cu  solver_int4.h  solver_int8.cu  solver_int8.h
(+31 files in other folders)
